# Programacion_II

programacion-main/: .gitignore  README.md
programacion-main/fastAPI-example/: main.py  pyproject.toml
programacion-main/fastAPI-example/app/: main.py
programacion-main/fastAPI-example/app/api/: dependencies.py
programacion-main/fastAPI-example/app/api/v1/: router.py
programacion-main/fastAPI-example/app/api/v1/endpoints/: albums.py  artists.py
programacion-main/fastAPI-example/app/core/: config.py  database.py  security.py
programacion-main/fastAPI-example/app/models/: __init__.py  album.py  artist.py
programacion-main/fastAPI-example/app/repositories/: __init__.py  album_repository.py  artist_repository.py  base_repository.py
programacion-main/fastAPI-example/app/schemas/: __init__.py  album.py  artist.py
programacion-main/fastAPI-example/app/services/: __init__.py  album_service.py  artist_service.py
programacion-main/fastAPI-example/instance/: Chinook.db
programacion-main/fastAPI-example/models-all/: models.py
programacion-main/flask-example/: main.py  pyproject.toml
programacion-main/flask-example/data/: models.py
programacion-main/flask-example/templates/: index.html
